--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -172,7 +172,7 @@ body {
     font-feature-settings: 'kern' 1;
     height: 100%;
     max-height: 100%;
-    font-family: "Noto Serif", serif;
+    font-family: "Open Sans", serif;
     font-size: 2.2rem;
     line-height: 1.7em;
     color: #3A4145;
@@ -320,7 +320,7 @@ mark {
 
 code, tt {
     padding: 1px 3px;
-    font-family: Inconsolata, monospace, sans-serif;
+    font-family: "Droid Sans Mono", monospace, sans-serif;
     font-size: 0.85em;
     white-space: pre-wrap;
     border: #E3EDF3 1px solid;
@@ -335,7 +335,7 @@ pre {
     border: #E3EDF3 1px solid;
     width: 100%;
     padding: 10px;
-    font-family: Inconsolata, monospace, sans-serif;
+    font-family: "Droid Sans Mono", monospace, sans-serif;
     font-size: 0.9em;
     white-space: pre;
     overflow: auto;
@@ -507,7 +507,7 @@ margin on the iframe, cause it breaks stuff. */
     font-size: 1.8rem;
     line-height: 1.6em;
     font-weight: 400;
-    font-family: "Noto Serif", serif;
+    font-family: "Open Sans", serif;
     letter-spacing: 0;
     text-shadow: 0 1px 3px rgba(0,0,0,0.15);
 }
