--- a/default.hbs
+++ b/default.hbs
@@ -16,7 +16,7 @@
 
     {{! Styles'n'Scripts }}
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Droid+Sans+Mono|Open+Sans:400italic,700italic,400,700" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Droid+Sans+Mono|PT+Mono|Open+Sans:400italic,700italic,400,700" />
 
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
