--- a/default.hbs
+++ b/default.hbs
@@ -16,6 +16,7 @@
 
     {{! Styles'n'Scripts }}
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
+    <link rel="stylesheet" type="text/css" href="{{asset "css/prism.css"}}">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Droid+Sans+Mono|PT+Mono|Open+Sans:400italic,700italic,400,700" />
 
     {{! Ghost outputs important style and meta data with this tag }}
@@ -40,6 +41,13 @@
     {{! The main JavaScript file for Casper }}
     <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
+
+    <script>
+      var pres = document.getElementsByTagName("pre");
+      for(var i = 0; i < pres.length; i++)
+         pres[i].className += "line-numbers";
+    </script>
+    <script src="{{asset "js/prism.js"}}"></script>
 
 </body>
 </html>
