--- a/default.hbs
+++ b/default.hbs
@@ -16,7 +16,7 @@
 
     {{! Styles'n'Scripts }}
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
-    <link rel="stylesheet" type="text/css" href="{{asset "css/prism.css"}}">
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/monokai_sublime.min.css">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Droid+Sans+Mono|PT+Mono|Open+Sans:400italic,700italic,400,700" />
 
     {{! Ghost outputs important style and meta data with this tag }}
@@ -42,12 +42,8 @@
     <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
 
-    <script>
-      var pres = document.getElementsByTagName("pre");
-      for(var i = 0; i < pres.length; i++)
-         pres[i].className += "line-numbers";
-    </script>
-    <script src="{{asset "js/prism.js"}}"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
 
 </body>
 </html>
