--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -336,20 +336,26 @@ pre {
     padding: 10px;
     font-family: "Droid Sans Mono", monospace, sans-serif;
     font-size: 0.7em;
-    white-space: pre;
     background: #23241f;
     color: #f8f8f2;
     border-radius: 3px;
     line-height: 1.6em;
+
+    overflow: auto;
+    word-wrap: normal;
+    white-space: pre;
 }
 
 pre code, tt {
     font-size: inherit;
-    white-space: -moz-pre-wrap;
-    white-space: pre-wrap;
     background: transparent;
     border: none;
     padding: 0.5em;
+    display: block;
+
+    overflow: auto;
+    word-wrap: normal;
+    white-space: pre;
 }
 
 b, strong {
