Add go to highlight.js

--- a/default.hbs
+++ b/default.hbs
@@ -43,6 +43,7 @@
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
 
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.7/highlight.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.7/languages/go.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
 
 </body>
