--- a/default.hbs
+++ b/default.hbs
@@ -16,7 +16,7 @@
 
     {{! Styles'n'Scripts }}
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
-    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.7/styles/monokai_sublime.min.css">
+    <link rel="stylesheet" type="text/css" href="{{asset "css/highlight.monokai_sublime.min.css"}}" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Droid+Sans+Mono|PT+Mono|Open+Sans:300italic,600italic,300,600" />
 
     {{! Ghost outputs important style and meta data with this tag }}
@@ -39,11 +39,12 @@
     {{ghost_foot}}
 
     {{! The main JavaScript file for Casper }}
+    <script type="text/javascript" src="{{asset "js/jquery-1.11.3.min.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
 
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.7/highlight.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.7/languages/go.min.js"></script>
+    <script type="text/javascript" src="{{asset "js/highlight.min.js"}}"></script>
+    <script type="text/javascript" src="{{asset "js/highlight.go.min.js"}}"></script>
     <script>hljs.initHighlightingOnLoad();</script>
 
 </body>
