Self-host the fonts

--- a/default.hbs
+++ b/default.hbs
@@ -17,7 +17,7 @@
     {{! Styles'n'Scripts }}
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
     <link rel="stylesheet" type="text/css" href="{{asset "css/highlight.monokai_sublime.min.css"}}" />
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Droid+Sans+Mono|PT+Mono|Open+Sans:300italic,600italic,300,600" />
+    <link rel="stylesheet" type="text/css" href="{{asset "fonts/fonts.css"}}" />
 
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
