--- a/tag.hbs
+++ b/tag.hbs
@@ -19,6 +19,7 @@
 
     <header class="tag-archive-header">
         <h1>{{tag.name}}</h1>
+		<p>{{tag.description}}</p>
     </header>
 
     {{! Each post will be output using this markup }}
