Make title links relative

--- a/page.hbs
+++ b/page.hbs
@@ -8,7 +8,7 @@
     <article class="{{post_class}}">
 
         <header class="post-header">
-            <a class="blog-logo" href="{{@blog.url}}">
+            <a class="blog-logo" href="/">
                 {{#if @blog.logo}}
                     <img src="{{@blog.logo}}" alt="Blog Logo" />
                 {{else}}
