--- a/post.hbs
+++ b/post.hbs
@@ -9,7 +9,7 @@
 
         {{! Each post has the blog logo at the top, with a link back to the home page }}
         <header class="post-header">
-            <a class="blog-logo" href="{{@blog.url}}">
+            <a class="blog-logo" href="/">
                 {{#if @blog.logo}}
                     <img src="{{@blog.logo}}" alt="Blog Logo" />
                 {{else}}
