--- a/post.hbs
+++ b/post.hbs
@@ -43,6 +43,7 @@
                         {{#if location}}<span class="author-location icon-location">{{location}}</span>{{/if}}
                         {{#if website}}<span class="author-link icon-link"><a href="{{website}}">{{website}}</a></span>{{/if}}
                     </div>
+                    <div class="rc-scout"></div>
                 </section>
                 {{/author}}
 
