Embed the Scout code

--- a/post.hbs
+++ b/post.hbs
@@ -44,6 +44,7 @@
                         {{#if website}}<span class="author-link icon-link"><a href="{{website}}">{{website}}</a></span>{{/if}}
                     </div>
                     <div class="rc-scout"></div>
+                    <script async defer src="https://www.recurse-scout.com/loader.js?t=e2e278036cc95428674cb2f247dfbc01"></script>
                 </section>
                 {{/author}}
 
