Try to get x scrolling for code / again

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -348,6 +348,8 @@ pre code, tt {
     border: none;
     padding: 0.5em;
     display: block;
+    white-space: pre;
+    overflow-x: scroll;
 }
 
 b, strong {
