Try to get x scrolling for code / safari #$!@

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -349,7 +349,8 @@ pre code, tt {
     padding: 0.5em;
     display: block;
     white-space: pre;
-    overflow-x: scroll;
+    overflow-x: auto;
+    word-break: normal;
 }
 
 b, strong {
