Add feed button to the tag page

--- a/tag.hbs
+++ b/tag.hbs
@@ -19,7 +19,10 @@
 
     <header class="tag-archive-header">
         <h1>{{tag.name}}</h1>
-		<p>{{tag.description}}</p>
+	<p>
+		{{tag.description}} 
+		<a class="icon-feed" href="{{tag.url}}/rss/"><span class="tooltip">Subscribe to the tag</span></a>
+	</p>
     </header>
 
     {{! Each post will be output using this markup }}
