--- a/page-tags.hbs
+++ b/page-tags.hbs
@@ -24,17 +24,17 @@
             
             {{#foreach tags}}
 
-                <section class="tag">
-                    <header class="tag-header">
-                        <h2>
+                <article class="{{post_class}}">
+                    <header class="post-header">
+                        <h2 class="post-title">
                             <a href="{{url}}" title="{{name}}" class="tag tag-{{id}} {{slug}}">{{name}}</a>
                             <a class="icon-feed" style="text-decoration: none;" href="{{url}}/rss/"></a>
                         </h2>
                     </header>
-                    <section class="tag-excerpt">
+                    <section class="post-excerpt">
                         <p>{{description}}</p>
                     </section>
-                </section>
+                </article>
 
             {{/foreach}}
 
