--- a/page-tags.hbs
+++ b/page-tags.hbs
@@ -22,11 +22,11 @@
                 {{content}}
             
                 {{#foreach tags}}
-                    <h3><a href="{{url}}" style="text-decoration: none;">{{name}}</a></h3>
-                    <p>
-                        {{description}}
-                        <a class="icon-feed" style="text-decoration: none;" href="{{url}}/rss/"></a>
-                    </p>
+                    <h3>
+                        <a href="{{url}}" style="text-decoration: none;">{{name}}</a>
+                        <a class="icon-feed" style="text-decoration: none; font-size: 16px;" href="{{url}}/rss/"></a>
+                    </h3>
+                    <p>{{description}}</p>
                 {{/foreach}}
             </section>
 
