Migrate to Ghost 1.0

--- a/author.hbs
+++ b/author.hbs
@@ -5,7 +5,7 @@
 
 {{! Everything inside the #author tags pulls data from the author }}
 {{#author}}
-<header class="site-head" {{#if cover}}style="background-image: url({{cover}})"{{/if}}>
+<header class="site-head" {{#if cover_image}}style="background-image: url({{cover_image}})"{{/if}}>
     <div class="vertical">
         <div class="site-head-content inner">
             <h1 class="blog-title">{{name}}</h1>
