--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -695,29 +695,29 @@ h2 {
 
 /* Stop .full-img from creating horizontal scroll - slight hack due to
    imperfections with browser width % calculations and rounding */
-.post-template .content {
+.page-template .content, .post-template .content {
     overflow: hidden;
 }
 
 /* Tweak the .post wrapper style */
-.post-template .post {
+.page-template .post, .post-template .post {
     margin-top: 0;
     border-bottom: none;
     padding-bottom: 0;
 }
 
 /* Kill that stylish little circle that was on the border, too */
-.post-template .post:after {
+.page-template .post:after, .post-template .post:after {
     display: none;
 }
 
 /* Insert some mad padding up in the header for better spacing */
-.post-template .post-header {
+.page-template .post-header, .post-template .post-header {
     padding: 60px 0;
     text-align: center;
 }
 
-.post-template .blog-title {
+.page-template .blog-title, .post-template .blog-title {
     display: inline-block;
     padding: 2.5rem 0;
 }
@@ -1119,11 +1119,11 @@ h2 {
         font-size: 0.8em
     }
 
-    .post-template .post {
+    .page-template .post, .post-template .post {
         padding-bottom: 1rem;
     }
 
-    .post-template .post-header {
+    .page-template .post-header, .post-template .post-header {
         padding: 40px 0;
     }
 
@@ -1231,16 +1231,16 @@ h2 {
         font-size: 1.7rem;
     }
 
-    .post-template .post {
+    .page-template .post, .post-template .post {
         padding-bottom: 0;
         margin-bottom: 0;
     }
 
-    .post-template .post-header {
+    .page-template .post-header, .post-template .post-header {
         padding: 30px 0;
     }
 
-    .post-template .site-footer {
+    .page-template .site-footer, .post-template .site-footer {
         margin-top: 0;
     }
 
