--- a/post.hbs
+++ b/post.hbs
@@ -45,24 +45,10 @@
                     </div>
                     <div class="rc-scout"></div>
                     <script async defer src="https://www.recurse-scout.com/loader.js?t=e2e278036cc95428674cb2f247dfbc01"></script>
+                    <p>Sign up to my newsletter—<a href="https://buttondown.email/cryptography-dispatches">Cryptography Dispatches</a>—for more frequent, lightly edited writings on cryptography.</p>
+                    <iframe scrolling="no" style="width:100%!important;height:220px;border:1px #ccc solid !important;margin:0" src="https://buttondown.email/cryptography-dispatches?as_embed=true"></iframe>
                 </section>
                 {{/author}}
-
-                <section class="share">
-                    <h4>Share this post</h4>
-                    <a class="icon-twitter" href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}"
-                        onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
-                        <span class="hidden">Twitter</span>
-                    </a>
-                    <a class="icon-facebook" href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}"
-                        onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
-                        <span class="hidden">Facebook</span>
-                    </a>
-                    <a class="icon-google-plus" href="https://plus.google.com/share?url={{url absolute="true"}}"
-                       onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
-                        <span class="hidden">Google+</span>
-                    </a>
-                </section>
 
             </footer>
 
