--- a/index.hbs
+++ b/index.hbs
@@ -4,12 +4,12 @@
     the {body} of the default.hbs template, which contains our header/footer. }}
 
 {{! The big featured header on the homepage, with the site logo and description }}
-<header class="site-head" {{#if @blog.cover_image}}style="background-image: url({{@blog.cover_image}})"{{/if}}>
+<header class="site-head" {{#if @site.cover_image}}style="background-image: url({{@site.cover_image}})" {{/if}}>
     <div class="vertical">
         <div class="site-head-content inner">
-            {{#if @blog.logo}}<a class="blog-logo" href="/"><img src="{{@blog.logo}}" alt="Blog Logo" /></a>{{/if}}
-            <h1 class="blog-title">{{@blog.title}}</h1>
-            <h2 class="blog-description">{{@blog.description}}</h2>
+            {{#if @site.logo}}<a class="blog-logo" href="/"><img src="{{@site.logo}}" alt="Blog Logo" /></a>{{/if}}
+            <h1 class="blog-title">{{@site.title}}</h1>
+            <h2 class="blog-description">{{@site.description}}</h2>
         </div>
     </div>
 </header>
@@ -22,7 +22,9 @@
 
     <article class="{{post_class}}">
         <header class="post-header">
-            <span class="post-meta">{{author}}, <time datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMM YYYY"}}</time> {{tags prefix="on "}}</span>
+            <span class="post-meta">{{authors}}, <time
+                    datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMM YYYY"}}</time>
+                {{tags prefix="on "}}</span>
             <h2 class="post-title"><a href="{{url}}">{{{title}}}</a></h2>
         </header>
         <section class="post-excerpt">
