--- a/page-tags.hbs
+++ b/page-tags.hbs
@@ -6,29 +6,29 @@
 
         <header class="post-header">
             <a class="blog-logo" href="/">
-                {{#if @blog.logo}}
-                    <img src="{{@blog.logo}}" alt="Blog Logo" />
+                {{#if @site.logo}}
+                <img src="{{@site.logo}}" alt="Blog Logo" />
                 {{else}}
-                    <span class="blog-title">{{@blog.title}}</span>
+                <span class="blog-title">{{@site.title}}</span>
                 {{/if}}
             </a>
         </header>
 
         {{#post}}
 
-            <h1 class="post-title">{{{title}}}</h1>
+        <h1 class="post-title">{{{title}}}</h1>
 
-            <section class="post-content">
-                {{content}}
-            
-                {{#foreach tags}}
-                    <h3>
-                        <a href="{{url}}" style="text-decoration: none;">{{name}}</a>
-                        <a class="icon-feed" style="text-decoration: none; font-size: 16px;" href="{{url}}/rss/"></a>
-                    </h3>
-                    <p>{{description}}</p>
-                {{/foreach}}
-            </section>
+        <section class="post-content">
+            {{content}}
+
+            {{#foreach tags}}
+            <h3>
+                <a href="{{url}}" style="text-decoration: none;">{{name}}</a>
+                <a class="icon-feed" style="text-decoration: none; font-size: 16px;" href="{{url}}/rss/"></a>
+            </h3>
+            <p>{{description}}</p>
+            {{/foreach}}
+        </section>
 
         {{/post}}
 
