Add newsletter subscriber tags

--- a/post.hbs
+++ b/post.hbs
@@ -45,11 +45,12 @@
                 <div class="rc-scout"></div>
                 <script async defer
                     src="https://www.recurse-scout.com/loader.js?t=e2e278036cc95428674cb2f247dfbc01"></script>
-                <p>Sign up to my newsletter—<a href="https://buttondown.email/cryptography-dispatches">Cryptography
+                <p>Sign up to my newsletter—<a
+                        href="https://buttondown.email/cryptography-dispatches?tag=blog">Cryptography
                         Dispatches</a>—for more frequent, lightly edited writings on cryptography.</p>
                 <iframe scrolling="no"
                     style="width:100%!important;height:220px;border:1px #ccc solid !important;margin:0"
-                    src="https://buttondown.email/cryptography-dispatches?as_embed=true"></iframe>
+                    src="https://buttondown.email/cryptography-dispatches?tag=blog&as_embed=true"></iframe>
             </section>
             {{/primary_author}}
 
