--- a/page-tags.hbs
+++ b/page-tags.hbs
@@ -5,7 +5,7 @@
     <article class="{{post_class}}">
 
         <header class="post-header">
-            <a class="blog-logo" href="/">
+            <a class="blog-logo" href="https://filippo.io/">
                 <span class="blog-title">{{@site.title}}</span>
             </a>
         </header>
