--- a/page.hbs
+++ b/page.hbs
@@ -8,7 +8,7 @@
     <article class="{{post_class}}">
 
         <header class="post-header">
-            <a class="blog-logo" href="/">
+            <a class="blog-logo" href="https://filippo.io/">
                 <span class="blog-title">{{@site.title}}</span>
             </a>
         </header>
