--- a/post.hbs
+++ b/post.hbs
@@ -9,7 +9,7 @@
 
         {{! Each post has the blog logo at the top, with a link back to the home page }}
         <header class="post-header">
-            <a class="blog-logo" href="/">
+            <a class="blog-logo" href="https://filippo.io/">
                 <span class="blog-title">{{@site.title}}</span>
             </a>
         </header>
