--- a/default.hbs
+++ b/default.hbs
@@ -14,9 +14,10 @@
 
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
 
-    {{! Styles'n'Scripts }}
+    {{^is "post"}}
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
     <link rel="stylesheet" type="text/css" href="{{asset "fonts/fonts.css"}}" />
+    {{/is}}
 
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
@@ -26,16 +27,6 @@
 
     {{! Everything else gets inserted here }}
     {{{body}}}
-
-    <footer class="site-footer">
-        <a class="subscribe icon-feed" href="{{@site.url}}/rss/"><span class="tooltip">Subscribe!</span></a>
-        <div class="inner">
-            <section class="copyright">All content copyright <a href="{{@site.url}}/">{{@site.title}}</a> &copy;
-                {{date format="YYYY"}} &bull; All rights reserved.</section>
-            <section class="poweredby">Proudly published with <a class="icon-ghost" href="https://ghost.org">Ghost</a>
-            </section>
-        </div>
-    </footer>
 
     {{! Ghost outputs important scripts and data with this tag }}
     {{ghost_foot}}
