Fix code blocks in new post style

--- a/post.hbs
+++ b/post.hbs
@@ -50,9 +50,23 @@
       background: transparent;
     }
 
-    code {
+    code, pre {
       font-family: "Source Code Pro", monospace;
       -webkit-font-smoothing: antialiased;
+    }
+
+    pre {
+      width: 100%;
+      padding: 1em;
+      background: #23241f;
+      color: #f8f8f2;
+      overflow-x: auto;
+    }
+
+    pre code {
+      font-size: 0.7em;
+      line-height: 1.6em;
+      display: block;
     }
 
     b,
