--- a/post.hbs
+++ b/post.hbs
@@ -59,6 +59,7 @@
     pre {
       width: 100%;
       padding: 1em;
+      box-sizing: border-box;
       background: #23241f;
       color: #f8f8f2;
       overflow-x: auto;
