Fix image sizes after update

--- a/post.hbs
+++ b/post.hbs
@@ -80,6 +80,7 @@
       display: block;
       max-width: 100%;
       height: auto;
+      width: auto;
       margin: 0 auto;
       max-height: 500px;
     }
@@ -129,11 +130,11 @@
 
 <main class="content" role="main">
 
-    <article class="{{post_class}}">
+    <header><a href="https://filippo.io">
+      Filippo Valsorda
+    </a></header>
 
-        <header><a href="https://filippo.io">
-          Filippo Valsorda
-        </a></header>
+    <article class="{{post_class}}">
 
         {{#post}}
 
