--- a/index.hbs
+++ b/index.hbs
@@ -1,39 +1,16 @@
 {{!< default}}
 
-{{! The comment above "< default" means - insert everything in this file into
-    the {body} of the default.hbs template, which contains our header/footer. }}
+<main class="index">
+    <header><a href="https://filippo.io">
+      Filippo Valsorda
+    </a></header>
 
-{{! The big featured header on the homepage, with the site logo and description }}
-<header class="site-head" {{#if @site.cover_image}}style="background-image: url({{@site.cover_image}})" {{/if}}>
-    <div class="vertical">
-        <div class="site-head-content inner">
-            <h1 class="blog-title">{{@site.title}}</h1>
-            <h2 class="blog-description">{{@site.description}}</h2>
-        </div>
-    </div>
-</header>
-
-{{! The main content area on the homepage }}
-<main class="content" role="main">
-
-    {{! Each post will be output using this markup }}
     {{#foreach posts}}
-
     <article class="{{post_class}}">
-        <header class="post-header">
-            <span class="post-meta">{{authors}}, <time
-                    datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMM YYYY"}}</time>
-                {{tags prefix="on "}}</span>
-            <h2 class="post-title"><a href="{{url}}">{{{title}}}</a></h2>
-        </header>
-        <section class="post-excerpt">
-            <p>{{excerpt}}&hellip; <a class="read-more" href="{{url}}">&raquo;</a></p>
-        </section>
+        <span class="post-meta">
+            <time datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMM YYYY"}}</time>
+        </span>
+        <h1 class="post-title"><a href="{{url}}">{{title}}</a></h1>
     </article>
-
     {{/foreach}}
-
-    {{!! After all the posts, we have the previous/next pagination links }}
-    {{pagination}}
-
 </main>
