--- a/default.hbs
+++ b/default.hbs
@@ -5,15 +5,14 @@
     <title>{{meta_title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
-    {{^is "post, index"}}
-    <link rel="stylesheet" href="{{asset "css/screen.css"}}">
-    <link rel="stylesheet" href="{{asset "fonts/fonts.css"}}">
-    {{/is}}
-    {{is "post, index"}}
+    {{#is "post, index"}}
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bitter:wght@500;600&family=Raleway:ital,wght@0,400;0,600;1,400;1,600&family=Source+Code+Pro&display=swap"> 
     <link rel="stylesheet" href="{{asset "css/new.css"}}">
+    {{else}}
+    <link rel="stylesheet" href="{{asset "css/screen.css"}}">
+    <link rel="stylesheet" href="{{asset "fonts/fonts.css"}}">
     {{/is}}
 
     {{ghost_head}}
