--- a/assets/css/new.css
+++ b/assets/css/new.css
@@ -107,6 +107,11 @@ h1 {
   font-size: 0.8em;
 }
 
+.twitter-tweet {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 @media only screen and (max-width: 500px) {
   body {
     font-size: initial;
