--- a/post.hbs
+++ b/post.hbs
@@ -7,9 +7,11 @@
 
     {{#post}}
     <article class="{{post_class}}">
+        {{^is "page"}}
         <span class="post-meta">
             <time datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMM YYYY"}}</time>
         </span>
+        {{/is}}
         <h1 class="post-title">{{title}}</h1>
         <section class="post-content">
             {{content}}
