Give up on the subscribe form

--- a/post.hbs
+++ b/post.hbs
@@ -15,12 +15,10 @@
         <h1 class="post-title">{{title}}</h1>
         {{#has tag="dispatches"}}
         <aside class="dispatches-cta">
-            <p>This is an issue of Cryptography Dispatches, my lightly edited newsletter on cryptography engineering.</p>
-            <p><form action="https://buttondown.email/api/emails/embed-subscribe/cryptography-dispatches" method="post" target="popupwindow">
-                <input type="email" name="email" placeholder="Email address">
-                <input type="submit" value="Subscribe">
-                <input type="hidden" name="tag" value="blog">
-            </form></p>
+            <p>
+                This is an issue of Cryptography Dispatches, my lightly edited newsletter on cryptography engineering.
+                <a href="https://buttondown.email/cryptography-dispatches?tag=blog">Subscribe via email or RSS.</a>
+            </p>
         </aside>
         {{/has}}
         <section class="post-content">
