Update subscribe link

--- a/post.hbs
+++ b/post.hbs
@@ -17,7 +17,7 @@
         <aside class="dispatches-cta">
             <p>
                 This is an issue of Cryptography Dispatches, my lightly edited newsletter on cryptography engineering.
-                <a href="https://buttondown.email/cryptography-dispatches?tag=blog">Subscribe via email or RSS.</a>
+                <a href="#/portal/signup">Subscribe via email</a> or <a href="https://words.filippo.io/dispatches/rss/">RSS</a>.
             </p>
         </aside>
         {{/has}}
